still overflow, fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -755,6 +755,9 @@ path {
 }
 
 @media (max-width: $breakpoint-mobile) {
+  html {
+    overflow-x: hidden;
+  }
   body {
     position: relative;
     overflow-x: hidden;
